--- a/automations.yaml
+++ b/automations.yaml
@@ -85,7 +85,7 @@
 - id: '15410589874822'
   alias: tu Mở đèn Yeelight
   trigger:
-  - entity_id: device_tracker.hostone
+  - entity_id: device_tracker.luong_note_8
     from: not_home
     platform: state
     to: home
@@ -101,6 +101,6 @@
     platform: homeassistant
   action:
   - wait_template: '{{ is_state(''binary_sensor.ping_binary_sensor'', ''on'') }}'
-  - service: hassio.addon_start
-    data:
+  - data:
       addon: core_duckdns
+    service: hassio.addon_restart
