--- a/configuration2.yaml
+++ b/configuration2.yaml
@@ -2,7 +2,7 @@ homeassistant:
   # Name of the location where Home Assistant is running
   name: NHÀ LÊ VĂN LƯỢNG
   # Location required to calculate the time the sun rises and sets
-  latitude: 012.213666
+  latitude: 12.213666
   longitude: 109.183506 
   # Impacts weather/sunrise data (altitude above sea level in meters)
   elevation: 0
@@ -16,7 +16,7 @@ homeassistant:
 # Show links to resources in log and frontend
 introduction:
 emulated_hue: !include emulated_hue.yaml
-
+   
 # Enables the frontend
 frontend:
   themes:
@@ -30,19 +30,29 @@ frontend:
 xiaomi_aqara:
   discovery_retry: 5
   gateways:
-    - key: uly9m5ktnmzov2y2
+  - mac: 7C49EB1CEE10
+    key: gcafag06cwts5urr
+    host: 192.168.1.7
 
 # Enables configuration UI
 config:
 
-# Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-# http:
-#   base_url: example.duckdns.org:8123
+
 http:
   ssl_certificate: /ssl/fullchain.pem
   ssl_key: /ssl/privkey.pem
   api_password: 123456
   base_url: leluong76.duckdns.org
+
+# Checks for available updates
+# Note: This component will send some information about your system to
+# the developers to assist with development of Home Assistant.
+# For more information, please see:
+# https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
+updater:
+  # Optional, allows Home Assistant developers to focus on popular components.
+  # include_used_components: true
+
 zone:
   - name: 'home'
     latitude: 12.213666
@@ -57,16 +67,6 @@ zone:
     latitude: 12.220795
     longitude: 109.202557
     icon: mdi:home
-
-# Checks for available updates
-# Note: This component will send some information about your system to
-# the developers to assist with development of Home Assistant.
-# For more information, please see:
-# https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
-updater:
-  # Optional, allows Home Assistant developers to focus on popular components.
-  # include_used_components: true
-
 # Discover some devices automatically
 discovery:
 
@@ -85,9 +85,8 @@ map:
 # Track the sun
 sun:
 
-# Sensors
+# Weather prediction
 sensor:
-  # Weather prediction
   - platform: yr
   - platform: command_line
     name: CPU Temperature
@@ -100,7 +99,7 @@ sensor:
     state_topic: "humi/soy"
     unit_of_measurement: '%'
   - platform: darksky
-    api_key: 1efb950e5fd25be6dc4e31fd08d9ef59
+    api_key: 817307cc891147d00f5404f0aa475930
     monitored_conditions: 
       - summary 
       - icon 
@@ -172,30 +171,27 @@ sensor:
     name: "Battery Iphone 7"
     unit_of_measurement: "%"
     value_template: '{{ value_json.batt }}'
-    device_class: battery
+    device_class: battery  
 # Text to speech
-
 tts:
   - platform: google
     cache: true
     cache_dir: /tmp/tts
     time_memory: 300
     language: 'vi'
+
 binary_sensor:
   - platform: ping
     host: 8.8.8.8
     scan_interval: 20 
-  - platform: ping
-    host: 192.168.1.68
 # Cloud
 cloud:
-ifttt:
-  key: cQBgnlPUuP4wUuBVjNTT1X
 
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
-
+ifttt:
+  key: cQBgnlPUuP4wUuBVjNTT1X
 switch:
   - platform: broadlink
     host: 192.168.1.2
@@ -375,6 +371,73 @@ light:
     optimistic: false
     qos: 0     
 
+
+device_tracker:
+  - platform: ping
+    hosts:
+      hostone: 192.168.1.168 
+    username: admin
+    interval_seconds: 60
+    consider_home: 100
+    track_new_devices: yes          
+  
+  - platform: owntracks
+    max_gps_accuracy: 200
+    waypoints: True
+    
+    events_only: True
+  - platform: icloud
+    username: leluongnt@gmail.com
+    password: Luong123456
+    account_name: accountname
+  - platform: icloud2
+    username: leluongnt@gmail.com
+    password: Luong123456
+    account_name: icloud_descriptive_name
+    filter_devices: 'iphone7'
+climate:
+  - platform: broadlink
+    name: Máy lạnh Panasonic
+    host: 192.168.1.2
+    mac: 'b4:43:0d:38:a4:bd'
+    ircodes_ini: 'broadlink_climate_codes/mitsubishi_electric.ini'
+    min_temp: 16
+    max_temp: 30
+    target_temp: 27
+    temp_sensor: sensor.broadlink_sensor_temperature
+    default_operation_from_idle: cool
+    default_operation: cool
+    default_fan_mode: mid
+    customize:
+      operations:
+        - idle
+        - cool
+        
+      fan_modes:
+        - low
+        - mid
+        - high
+  - platform: broadlink
+    name: Bed Room Fan
+    host: 192.168.1.2
+    mac: 'b4:43:0d:38:a4:bd'
+    ircodes_ini: 'broadlink_fan_codes/living_room_fan.ini'
+    default_speed: low
+    defaut_direction: left
+    customize:
+      operations:
+        - on
+        - off
+        - 1h
+        - 2h
+        - 4h
+        - 8h
+      fan_modes:
+        - low
+        - medium
+        - high
+        - highest   
+
 cover:
   - platform: mqtt
     name: "SKY DOOR 1"
@@ -446,7 +509,8 @@ cover:
     payload_stop: "STOP"
     state_open: "open"
     state_closed: "closed"
-    optimistic: false  
+    optimistic: false
+    
   - platform: template
     covers:
       garage_door:
@@ -458,6 +522,7 @@ cover:
           service: script.close_garage_door
         stop_cover:
           service: script.stop_garage_door
+          
   - platform: template
     covers:
       garage_door:
@@ -481,70 +546,14 @@ cover:
           {% else %}
             mdi:garage
           {% endif %}
+#    value_template: '{{ value.x }}'
 input_number: !include input_number.yaml
-# Example configuration.yaml entry for Netgear device
-device_tracker:
-  - platform: netgear
-    host: 192.168.1.1
-    username: admin
-    password: 123456
-    new_device_defaults:
-      track_new_devices: true
-      hide_if_away: false
-  - platform: ping
-    hosts:
-      hostone: 192.168.1.168
-  - platform: ping
-    hosts:
-      hostone: 192.168.1.15
-  - platform: icloud
-    username: leluongnt@gmail.com
-    password: Luong123456
-    account_name: accountname
-  - platform: icloud2
-    username: leluongnt@gmail.com
-    password: Luong123456
-    account_name: icloud_descriptive_name
-    filter_devices: 'iphone7'
-climate:
-  - platform: broadlink
-    name: Máy lạnh Panasonic
-    host: 192.168.1.2
-    mac: 'b4:43:0d:38:a4:bd'
-    ircodes_ini: 'broadlink_climate_codes/mitsubishi_electric.ini'
-    min_temp: 16
-    max_temp: 30
-    target_temp: 27
-    temp_sensor: sensor.broadlink_sensor_temperature
-    default_operation_from_idle: cool
-    default_operation: cool
-    default_fan_mode: mid
-    customize:
-      operations:
-        - idle
-        - cool
-        
-      fan_modes:
-        - low
-        - mid
-        - high
-  - platform: broadlink
-    name: Bed Room Fan
-    host: 192.168.1.2
-    mac: 'b4:43:0d:38:a4:bd'
-    ircodes_ini: 'broadlink_fan_codes/living_room_fan.ini'
-    default_speed: low
-    defaut_direction: left
-    customize:
-      operations:
-        - on
-        - off
-        - 1h
-        - 2h
-        - 4h
-        - 8h
-      fan_modes:
-        - low
-        - medium
-        - high
-        - highest   
+# Example configuration.yaml entry
+notify:
+  - platform: html5
+    name: NOTIFIER_THÔNG BÁO
+    gcm_api_key: 'AIzaSyBhc3Y-Z71qcZezlVS7HHS_AXqfXasdZBo'
+    gcm_sender_id: '322759080701'
+  - name: NOTIFIER_NAME
+    platform: pushbullet
+    api_key: o.Vu2uDVghzmvpbkKrag51GMycBkbsKA9f
