--- a/configuration.yaml
+++ b/configuration.yaml
@@ -160,7 +160,7 @@ sensor:
             {% else %}
                 {{ states.sensor.battery_iphone.state }}
             {%- endif %}
-        icon_template: '{%- if is_state("sensor.battery_iphone", "unknown") %}mdi:battery-unknown{%- elif is_state_attr("device_tracker.iphonecuathai", "battery_status", "Charging") %}mdi:battery-charging{%- elif  states.device_tracker.iphonecuathai.attributes.battery <= 5 %}mdi:battery-outline{%- elif states.device_tracker.iphonecuathai.attributes.battery >= 95 %}mdi:battery{% else %}mdi:battery-{{(states.device_tracker.iphonecuathai.attributes.battery|float / 10)|round*10}}{%- endif %}'       
+        icon_template: '{%- if is_state("sensor.battery_iphone", "unknown") %}mdi:battery-unknown{%- elif is_state_attr("device_tracker.iphone7", "battery_status", "Charging") %}mdi:battery-charging{%- elif  states.device_tracker.iphone7.attributes.battery <= 5 %}mdi:battery-outline{%- elif states.device_tracker.iphone7.attributes.battery >= 95 %}mdi:battery{% else %}mdi:battery-{{(states.device_tracker.iphone7.attributes.battery|float / 10)|round*10}}{%- endif %}'       
   - platform: mqtt
     state_topic: "owntracks/luong/note 8"
     name: "Battery Note 8"
@@ -500,7 +500,7 @@ device_tracker:
   - platform: icloud
     username: leluongnt@gmail.com
     password: Luong123456
-    account_name: accountname
+    account_name: iphone7
   - platform: icloud2
     username: leluongnt@gmail.com
     password: Luong123456
